apps/simple-go-app/base/deployment.yaml
# apps/simple-go-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-go-app
  labels:
    app.kubernetes.io/name: simple-go-app
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-go-app
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-go-app
        app.kubernetes.io/component: backend
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-pull-credentials
      containers:
        - name: simple-go-app
          image: simple-go-app-image
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
